# ai-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cobertura.xml  install.sh  nfpm.yaml
adapters/: Cargo.toml
adapters/src/: cli_installer.rs  composite_catalog_gateway.rs  fs_bundle_store.rs  fs_config_store.rs  fs_plugin_discoverer.rs  fs_profile_store.rs  fs_settings_store.rs  fs_skill_content.rs  fs_skill_creator.rs  fs_skill_repository.rs  fs_toggler.rs  fs_usage_history.rs  fs_watcher.rs  git_drift_checker.rs  git_skill_diff.rs  git_skill_sync.rs  import_chain.rs  lib.rs  npx_catalog_gateway.rs  ssh_connector.rs
core/: Cargo.toml
core/src/: audit.rs  budget.rs  bundle.rs  catalog.rs  config.rs  content.rs  creator.rs  diff.rs  drift.rs  duplicate_detector.rs  external_scanner.rs  frontmatter.rs  installer.rs  lib.rs  linter.rs  mode.rs  plugin_discovery.rs  profile.rs  repository.rs  security_scan.rs  settings.rs  signature.rs  skill.rs  ssh.rs  sync.rs  usage.rs  validation.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  i18n.rs  main.rs  terminal.rs
tui/src/ui/: audit_panel.rs  budget_panel.rs  bundles_panel.rs  command_palette.rs  confirm_panel.rs  create_wizard.rs  detail_panel.rs  diff_panel.rs  editor_panel.rs  help_overlay.rs  import_chain_panel.rs  install_wizard.rs  installed_panel.rs  keymap.rs  mod.rs  profiles_panel.rs  resize_panel.rs  scan_report.rs  search_panel.rs  settings_panel.rs  skill_explorer_panel.rs  skills_panel.rs  split_preview_panel.rs  ssh_panel.rs  status_bar.rs  style_helpers.rs  sync_panel.rs  theme.rs
tui/src/ui/snapshots/: ai_skill__ui__audit_panel__tests__snapshot_mixed_skills.snap  ai_skill__ui__budget_panel__tests__snapshot_empty_budget.snap  ai_skill__ui__bundles_panel__tests__snapshot_bundles_panel.snap  ai_skill__ui__confirm_panel__tests__snapshot_confirm_panel.snap  ai_skill__ui__detail_panel__tests__snapshot_valid_skill_with_content.snap  ai_skill__ui__help_overlay__tests__snapshot_help_overlay.snap  ai_skill__ui__import_chain_panel__tests__snapshot_import_chain.snap  ai_skill__ui__install_wizard__tests__snapshot_empty_wizard.snap  ai_skill__ui__install_wizard__tests__snapshot_wizard_with_entry.snap  ai_skill__ui__search_panel__tests__snapshot_empty_query.snap  (+23 more)
(+44 files in other folders)
