[package]
name = "ai-skill-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure domain model and business rules for the ai-skill TUI."
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
thiserror = "2"

[dev-dependencies]
indoc = "2"
