[package]
name = "ai-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Terminal UI for managing, auditing and installing AI agent skills."
readme = "../README.md"

[[bin]]
name = "ai-skill"
path = "src/main.rs"

[dependencies]
ai-skill-core = { path = "../core", version = "0.1.0" }
ai-skill-adapters = { path = "../adapters", version = "0.1.0" }
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
